--- a/chess_app/package.json
+++ b/chess_app/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "@types/ws": "^8.18.1",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^5.2.1",
-    "next": "16.1.3",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
